# SensibleFox

./: .dir2md.json  .gitignore  Cargo.toml  README.md  build.rs
assets/: autoconfig.js  context_menu_cleanup.css  macos-native-tabbar.css  policies.json  sensiblefox.cfg.tail  uBlock0@raymondhill.net.json
assets/installer/: Distribution.xml  conclusion.html  installer.applescript  welcome.html
screenshots/: comparison.md
scripts/: build-dmg.sh  build-pkg.sh  build.sh  generate-prefs.sh  release-to-github.sh  remove-legacy-firefox-config.sh
src/: css.rs  extend.rs  extensions.rs  firefox.rs  main.rs  paths.rs  policy.rs  prefs.rs  profile.rs  progress.rs  uninstall.rs  upstream.rs
